Fix z-index popover

--- a/app/styles/constants/z-index.scss
+++ b/app/styles/constants/z-index.scss
@@ -8,3 +8,5 @@ $z-index-modal: 4021;
 
 $z-index-profile-cover: 3999;
 $z-index-profile-cover-editing: 4001;
+
+$zindex-popover: 5000;
